<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/statistics"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textViewTotalRuns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_runs_0"
            android:textSize="26sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/textViewTotalDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_distance_0_000km"
            android:textSize="26sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/textViewTotalDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_duration_00_00_00"
            android:textSize="26sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/textViewTotalPhotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_photos_0"
            android:textSize="26sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/textViewLongestDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longest_distance_0_000km"
            android:textSize="26sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/textViewLongestDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longest_duration_00_00_00"
            android:textSize="26sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/textViewTotalCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burned_calories_0_kcal"
            android:textSize="26sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/textViewMaxCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_calories_0_kcal"
            android:textSize="26sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>